# Agente-IA-Finanzas-Billions

./: README.md  agente.md  analisis-tecnico.md  compartir-analisis-tecnico.md
.claude/: axelrod-strategy (2).html
live/: comparativa_amoniaco_live.html  comparativa_cobre_live.html  comparativa_cripto_live.html  sala_de_mercados_live.html
mineral-markets-mcp/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
mineral-markets-mcp/src/mineral_markets_mcp/: __init__.py  monitor.py  server.py  settings.py
mineral-markets-mcp/src/mineral_markets_mcp/analysis/: __init__.py  indicators.py
mineral-markets-mcp/src/mineral_markets_mcp/config/: __init__.py  loader.py
mineral-markets-mcp/src/mineral_markets_mcp/connectors/: base.py  open_data.py
mineral-markets-mcp/src/mineral_markets_mcp/core/: cache.py  exceptions.py  logging_config.py  models.py  ratelimit.py  registry.py  retry.py
mineral-markets-mcp/src/mineral_markets_mcp/db/: __init__.py  schema.sql  sqlite_store.py
mineral-markets-mcp/src/mineral_markets_mcp/signals/: __init__.py  engine.py  rules.py
mineral-markets-mcp/src/mineral_markets_mcp/tools/: market_tools.py
mineral-markets-mcp/src/mineral_markets_mcp/ui/: __init__.py  dashboard.py
